Partial_14Dec2021/force-app/main/default/objects/Bill_breakup__c/Bill_breakup__c.object-meta.xml
<CustomObject>
    <label>Bill breakup</label>
    <nameField>
        <label>Bill breakup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill breakup</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>