Partial_14Dec2021/force-app/main/default/objects/Bill_breakup__c/fields/Enterprise_scheme__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enterprise scheme</label>
    <referenceTo>Enterprise_scheme__c</referenceTo>
    <relationshipLabel>Bill breakup</relationshipLabel>
    <relationshipName>Bill_breakup</relationshipName>
    <type>Lookup</type>
</CustomField>