Partial_14Dec2021/force-app/main/default/objects/Bill_breakup__c/fields/Sales_scheme__c.field-meta.xml
<CustomField>
    <fullName>Sales_scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales scheme</label>
    <referenceTo>Sales_scheme__c</referenceTo>
    <relationshipLabel>Bill breakup</relationshipLabel>
    <relationshipName>Bill_breakup</relationshipName>
    <type>Lookup</type>
</CustomField>