Partial_14Dec2021/force-app/main/default/objects/Bill_breakup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Points__c</columns>
    <columns>Sales_Accrual__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Accrual__c</field>
        <operation>equals</operation>
        <value>SA-19009</value>
    </filters>
    <label>All</label>
</ListView>